# jazz

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PrototypeHeads.ipynb  README.org  Untitled.ipynb  Untitled1.ipynb  shell.nix
cmake/: arm-none-eabi-toolchain.cmake
lib/libjazz/: CMakeLists.txt
lib/libjazz/include/libjazz/: slab.hpp  value.hpp
lib/libjazz/src/: slab.cpp  value.cpp
src/delay/: CMakeLists.txt  Makefile  delay.cpp
src/granular/: CMakeLists.txt  Makefile  granular.cpp  granular.py
src/rachel/: CMakeLists.txt  Makefile  rachel.cpp
src/reverse/: CMakeLists.txt  Makefile  README.org  reverse.cpp
tests/: .gitignore  CMakeLists.txt  slab_gtest.cpp  value_gtest.cpp
